data/derived/sp14/progs/unify/prog2390.ml.out
Characters 14-19:
  let _ = clone clone (-3);;
                ^^^^^
Error: This expression has type int -> int -> 'a list
       but an expression was expected of type int
